[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-interface"
description = "The Solana Geyser plugin interface."
version = "1.15.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-geyser-plugin-interface"

[dependencies]
log = "0.4.17"
solana-sdk = { version = "1.15.0", package="tiny-sdk" }
solana-transaction-status = {  version = "1", package="tiny-transaction-status" }
thiserror = "1.0.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
