[package]
name = "shred-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
solana-ledger = { path = "../ledger", version = "=1.15.0" }
solana-perf = { path = "../perf", version = "=1.15.0" }
solana-streamer = { path = "../streamer", version = "=1.15.0" }
solana-core = { path = "../core", version = "=1.15.0" }
solana-sdk = { path = "../sdk", version = "=1.15.0" }
serde_derive = "1.0.103"
# serde=""
serde = "1.0.144"
solana-gossip = { path = "../gossip", version = "=1.15.0" }
tokio = { version = "~1.14.1", features = ["full"] }
log = "0.4.17"

[dev-dependencies]
solana-logger = { path = "../logger", version = "=1.15.0" }
